--- a/estilos.css
+++ b/estilos.css
@@ -1,6 +1,6 @@
 /* Color primario de fondo */
 body {
-  background-image: url(/img/Frame\ 2.png);
+  background-image: url(img/Frame\ 2.png);
   background-size: cover;
   background-repeat: no-repeat;
    color: white;
@@ -18,7 +18,7 @@ body {
 
 .backnav{
   background: rgba(32, 17, 5, 0.849);
-  background-image: url(/img/backnav.jpg);
+  background-image: url(img/backnav.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   
@@ -133,6 +133,10 @@ footer a:hover {
 
 .logos_redes{
   color: black;
+}
+
+#footerText{
+  color: #d1491f;
 }
 
 /* Formularios */
